2002-09-16  Sander Vesik <sander.vesik@sun.com>

	* stylesheets/yelp-customization.xsl:
	- initial support for <appendix>

2002-09-16  Sander Vesik <sander.vesik@sun.com>

	* stylesheets/yelp-customization.xsl:
	- unindent copyright
	- leave space inbetween the 'Copyright' header and copyright
	  holders
	- emulate 'fine print' on licence text
	- make <TT> use monospaced font (should go into gtkhtml2)
	- give <variablelist>-s back internal spacing that was
	  originaly lost due to both <variablelist> and table of
	  contents resulting in the same html tags
	- change nested ordered lists to use "lower-alpha" instead of
	  "lower-roman" 
	- yet more fighting with table borders
	- make tables be consistently top aligned
	- leave space before figures and figure titles inside lists

	* stylesheets/yelp-custom.xsl:
	- wrap legalnotice in <div class="legalnotice">...</div>

2002-09-04  Mikael Hallendal  <micke@codefactory.se>

	* Release 1.0.6

	* NEWS: udpated for 1.0.6

	* configure.in: 1.0.6

2002-09-01  Marius Andreiana <mandreiana@yahoo.com>

	* configure.in: added 'ro' to ALL_LINGUAS

2002-08-29  Mikael Hallendal  <micke@codefactory.se>

	* src/yelp-window.c: removed trailing comma in the enum. Fixes
	  #91789

2002-08-28  Mikael Hallendal  <micke@codefactory.se>

	* Release 1.0.5

	* configure.in: 1.0.5

	* NEWS: Updated for 1.0.5

2002-08-27  Kristian Rietveld  <kris@gtk.org>

	* src/yelp-view-content.c (content_reader_finished_cb): don't just
	  select that path, but set the cursor at that path (fixes
	  #91609).

2002-08-23  Mikael Hallendal  <micke@codefactory.se>

	* Release 1.0.4

	* configure.in: 1.0.4, updated gtkhtml2 reqs to 2.0.2

	* NEWS: Updated for 1.0.4
	
	* src/yelp-view-content.c:
	(yelp_view_content_show_uri): Applied patch from Padraig to fix
	focus handling. Fixes #90010.

2002-08-22  Kristian Rietveld  <kris@gtk.org>
 
	* src/yelp-man.c:
	(yelp_man_free_initial_tree): also free the node itself