@@ -1,3 +1,7 @@
+2002-09-17  Narayana Pattipati  <narayana.pattipati@wipro.com>
+
+	* src/yelp-pregenerate.c (main): added an error message.
+
 2002-09-16  Sander Vesik <sander.vesik@sun.com>
 
 	* stylesheets/yelp-customization.xsl:
